chore(package): Rename plugin

--- a/plugin.xml
+++ b/plugin.xml
@@ -3,15 +3,15 @@
 <plugin
   xmlns="http://apache.org/cordova/ns/plugins/1.0"
   xmlns:android="http://schemas.android.com/apk/res/android"
-  id="cordova-plugin-tts"
-  version="0.2.3">
+  id="cordova-plugin-texttospeech"
+  version="0.1.0">
   <name>TTS</name>
   <description>Cordova Text-to-Speech Plugin</description>
   <author>VILIC VANE</author>
   <license>MIT</license>
   <keywords>cordova,tts,text-to-speech</keywords>
-  <repo>https://github.com/vilic/cordova-plugin-tts.git</repo>
-  <issue>https://github.com/vilic/cordova-plugin-tts/issues</issue>
+  <repo>https://github.com/hypery2k/cordova-texttospeech-plugin.git</repo>
+  <issue>https://github.com/hypery2k/cordova-texttospeech-plugin/issues</issue>
 
   <js-module src="www/tts.js" name="tts">
     <clobbers target="TTS" />
