--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cordova-plugin-tts",
-  "version": "0.2.3",
+  "name": "cordova-plugin-texttospeech",
+  "version": "0.1.0",
   "description": "Cordova Text-to-Speech Plugin",
   "cordova": {
     "id": "cordova-plugin-tts",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vilic/cordova-plugin-tts.git"
+    "url": "git+https://github.com/hypery2k/cordova-texttospeech-plugin.git"
   },
   "keywords": [
     "cordova",
@@ -23,10 +23,44 @@
     "cordova-wp8",
     "cordova-android"
   ],
-  "author": "VILIC VANE",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/vilic/cordova-plugin-tts/issues"
+    "url": "https://github.com/hypery2k/cordova-texttospeech-plugin/issues"
   },
-  "homepage": "https://github.com/vilic/cordova-plugin-tts#readme"
+  "homepage": "https://github.com/hypery2k/cordova-texttospeech-plugin#readme"
+  "scripts": {
+    "preclean": "npm i rimraf",
+    "clean": "rimraf node_modules dist",
+    "postclean": "npm i",
+    "build": "npm run jsdoc",
+    "jsdoc": "jsdoc -c jsdoc.json && jsdoc2md www/barcodescanner.js | sed s/barcodeScannerPlugin/cordova.plugins.barcodeScanner/g | sed s/barcodeScannerPlugin/cordova.plugins.barcodeScanner/g > PLUGIN_USAGE.MD",
+    "pretest": "rm -rf tmp && mkdir -p tmp && cd tmp && git clone https://github.com/simpligility/maven-android-sdk-deployer.git && cd maven-android-sdk-deployer/ && mvn install -P 6.0 && ls ~/.m2/repository/android/android/",
+    "test": "cd tmp && git clone https://github.com/hypery2k/cordova-demo-app.git && cd cordova-demo-app && npm install && npm run build && cordova platform add ${PLATFORM} && cordova plugin add cordova-plugin-compat && cordova build && cordova plugin add ../.. && cordova build",
+    "posttest": "npm run jsdoc",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "changelog:add": "git add plugin.xml && git add CHANGELOG.md && git commit -m 'chore(changelog): Updated CHANGELOG.md'",
+    "version": "cordova-plugin-xml setVersion",
+    "release:pre": "npm run clean && npm run build",
+    "release:post": "npm run version && npm run changelog && npm run changelog:add",
+    "release:major": "npm run release:pre && npm version major && npm run release:post && git push origin && git push origin --tags && npm run version-and-push",
+    "release:minor": "npm run release:pre && npm version minor && npm run release:post && git push origin && git push origin --tags && npm run version-and-push",
+    "release:patch": "npm run release:pre && npm version patch && npm run release:post && git push origin && git push origin --tags && npm run version-and-push",
+    "version-and-push": "git push origin && git push origin --tags && npm run publish-and-merge",
+    "publish-and-merge": "git checkout master && git merge develop && git push && git checkout develop && npm publish",
+    "prepublish": "npm run build"
+  },
+  "author": "Martin Reinhardt",
+  "contributors": [
+    {
+      "name": "VILIC VANE"
+    }
+  ],
+  "license": "MIT",
+  "devDependencies": {
+    "conventional-changelog-cli": "1.3.1",
+    "cordova-plugin-xml": "0.1.1",
+    "jsdoc": "3.5.0",
+    "jsdoc-to-markdown": "3.0.0",
+    "rimraf": "2.6.1"
+  }
 }
