--- a/package.json
+++ b/package.json
@@ -23,20 +23,18 @@
     "cordova-wp8",
     "cordova-android"
   ],
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/hypery2k/cordova-texttospeech-plugin/issues"
   },
-  "homepage": "https://github.com/hypery2k/cordova-texttospeech-plugin#readme"
+  "homepage": "https://github.com/hypery2k/cordova-texttospeech-plugin#readme",
   "scripts": {
     "preclean": "npm i rimraf",
     "clean": "rimraf node_modules dist",
     "postclean": "npm i",
     "build": "npm run jsdoc",
-    "jsdoc": "jsdoc -c jsdoc.json && jsdoc2md www/barcodescanner.js | sed s/barcodeScannerPlugin/cordova.plugins.barcodeScanner/g | sed s/barcodeScannerPlugin/cordova.plugins.barcodeScanner/g > PLUGIN_USAGE.MD",
     "pretest": "rm -rf tmp && mkdir -p tmp && cd tmp && git clone https://github.com/simpligility/maven-android-sdk-deployer.git && cd maven-android-sdk-deployer/ && mvn install -P 6.0 && ls ~/.m2/repository/android/android/",
     "test": "cd tmp && git clone https://github.com/hypery2k/cordova-demo-app.git && cd cordova-demo-app && npm install && npm run build && cordova platform add ${PLATFORM} && cordova plugin add cordova-plugin-compat && cordova build && cordova plugin add ../.. && cordova build",
-    "posttest": "npm run jsdoc",
+    "posttest": "exit 0",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "changelog:add": "git add plugin.xml && git add CHANGELOG.md && git commit -m 'chore(changelog): Updated CHANGELOG.md'",
     "version": "cordova-plugin-xml setVersion",
@@ -46,7 +44,7 @@
     "release:minor": "npm run release:pre && npm version minor && npm run release:post && git push origin && git push origin --tags && npm run version-and-push",
     "release:patch": "npm run release:pre && npm version patch && npm run release:post && git push origin && git push origin --tags && npm run version-and-push",
     "version-and-push": "git push origin && git push origin --tags && npm run publish-and-merge",
-    "publish-and-merge": "git checkout master && git merge develop && git push && git checkout develop && npm publish",
+    "publish-and-merge": "git checkout master && git merge develop && git push && npm publish && git checkout develop",
     "prepublish": "npm run build"
   },
   "author": "Martin Reinhardt",
@@ -58,7 +56,7 @@
   "license": "MIT",
   "devDependencies": {
     "conventional-changelog-cli": "1.3.1",
-    "cordova-plugin-xml": "0.1.1",
+    "cordova-plugin-xml": "0.1.2",
     "jsdoc": "3.5.0",
     "jsdoc-to-markdown": "3.0.0",
     "rimraf": "2.6.1"
